0032441: Draw Harness - command readstl doesn't print error message on failure

- added producing error message when passing an invalid file path